# Prac.package-python-project

./: README.md  pyproject.toml  pyproject_ad.toml  requirements.txt
exam1/: check.py
